# espeak-ng-cmake

./: CMakeLists.txt  README.md
